# domaindive

./: .env.template  .gitignore  AGENTS.md  Dockerfile  README.md  biome.json  docker-compose.yml  mix.exs  package.json  svelte.config.js  tsconfig.json  vite.config.js
.github/workflows/: docker.yml
app/: manage.py  package.json  pyproject.toml
app/analysis/: dependencies.py  forms.py  urls.py  views.py
app/analysis/analyzers/: _base.py  _manager.py  dns.py  whois.py
app/analysis/templates/analysis/: analysis_dashboard.html  request_analysis.html
app/domaindive/: asgi.py  env_utils.py  settings.py  urls.py  wsgi.py
app/domaindive/static/css/: styles.css  styles.tailwind
app/domaindive/templates/: 404.html  base.html
app/domaindive/templates/partials/: nav.html
app/domaindive/templatetags/: tailwind.py
assets/css/: app.css
assets/js/: app.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: domaindive.ex  domaindive_web.ex
lib/domaindive/: analysis.ex  application.ex  mailer.ex  repo.ex
lib/domaindive/analysis/: dns_service.ex  domain_analysis.ex  geolocation_service.ex  http_service.ex  ssl_service.ex  whois_parser.ex  whois_service.ex
lib/domaindive_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/domaindive_web/components/: core_components.ex  layouts.ex
priv/repo/: seeds.exs
src/: app.html
src/lib/server/: analysis.ts  db.ts  (+5 more)
src/routes/: +layout.svelte  +page.svelte
static/: site.webmanifest
test/: test_helper.exs
test/domaindive/: analysis_test.exs
test/support/: conn_case.ex  data_case.ex
(+15 files in other folders)
